fixed navbar dropdown, spacing, and sizing

--- a/app/assets/stylesheets/nav_bar.css
+++ b/app/assets/stylesheets/nav_bar.css
@@ -9,7 +9,7 @@ ul.nav-bar-items {
     align-items: center;
     height: 50px;
     padding: 5px;
-    /* margin: 0 auto; */
+    margin: 0 auto;
     /* background: orange; */
     border-bottom: 1px solid lightgray;
     /* max-width: 90%; */
@@ -20,27 +20,30 @@ nav.greeting-links {
     box-sizing: border-box;
     height: 100%;
     width: 200px;
+    margin-right: 25px;
 }
 
 
 button.form-button-signup {
     color: #fff;
     background-color: #247f9e;
-    font-size: 14px;
+    font-size: 20px;
     margin: 0 8px;
     border: 0.0625rem solid #247f9e;
     padding: 6px 12px 6px 12px;
     cursor: pointer;
+    border-radius: 3px;
 }
 
 button.form-button-signin {
     color: #2d333f;
     background-color: transparent;
     border: 0.0625rem solid #d8d9db;
-    font-size: 14px;
+    font-size: 20px;
     margin: 0;
     padding: 6px 12px 6px 12px;
     cursor: pointer;
+    border-radius: 3px;
 }
 
 h1.logo {
