--- a/app/assets/stylesheets/profile_nav.css
+++ b/app/assets/stylesheets/profile_nav.css
@@ -6,20 +6,24 @@ h3 {
     position: relative;
     box-sizing: border-box;
     border: 0;
-    padding: 0.8125rem 16px;
+    padding: 8px 12px;
     cursor: pointer;
     text-align: left;
-    /* font-family: sans-serif; */
 }
 
 .header-dropdown-menu li:hover {
   background: lightgray;
 }
 
+.user-header{
+    font-size: 20px;
+}
 .greeting {
-    position:relative;
-    z-index:5;
-    margin-right:25px
+    position: relative;
+    z-index: 5;
+    margin-right: 25px;
+    height: 50px;
+    line-height: 2.5;
 }
 
 .header-dropdown-menu {
@@ -28,23 +32,23 @@ h3 {
     white-space: nowrap;
     border: 1px solid lightgray;
     overflow: hidden;
-  
-    
+
 }
 
 li:hover .header-dropdown-menu {
     display: block;
-    top: 30px;
+    top: 50px;
     min-width: 30px;
     z-index: 5;
-    background:white;
+    background: white;
     border-radius: 3px;
     cursor: pointer;
+    left: -95px;
+    opacity: .9;
 }
 
 .notif-drop li {
     border-top: 1px solid orange;
 }
-
 
 
